compiler/fir/analysis-tests/testData/resolve/checkers/useBeforeStaticInitialization/possibleUninitializedAccess.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
<!POSSIBLE_INITIALIZATION_DEADLOCK!>object A<!> {
    val a = 1
    <!POTENTIALLY_UNINITIALIZED_PROPERTY!>val b = <!POTENTIALLY_UNINITIALIZED_ACCESSES!>B.a<!><!>
}

<!POSSIBLE_INITIALIZATION_DEADLOCK!>object B<!> {
    val a = A.a
}
